--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ certifi==2018.10.15
 chardet==3.0.4
 Click==7.0
 Flask==1.0.2
+Flask-Admin==1.5.3
+Flask-Login==0.4.1
+Flask-SQLAlchemy==2.3.2
 future==0.17.0
 idna==2.7
 itsdangerous==1.1.0
@@ -12,7 +15,9 @@ passlib==1.7.1
 requests==2.20.0
 schedule==0.5.0
 six==1.11.0
+SQLAlchemy==1.2.15
 urllib3==1.24
 uWSGI==2.0.17.1
-websocket-client==0.54.0
+websocket-client==0.53.0
 Werkzeug==0.14.1
+WTForms==2.2.1
