--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.0
 passlib==1.7.1
+python-dateutil==2.7.5
 requests==2.20.0
 schedule==0.5.0
 six==1.11.0
