--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask==1.0.2
 Flask-Admin==1.5.3
 Flask-Login==0.4.1
 Flask-SQLAlchemy==2.3.2
+future==0.18.2
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
